[PR c++/84836] ICE with local scopes

https://gcc.gnu.org/ml/gcc-patches/2018-03/msg01082.html
	PR c++/84836
	* name-lookup.c (update_binding): Correct logic for local binding
	update.

	PR c++/84836
	* g++.dg/lookup/pr84836.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258711 138bc75d-0d04-0410-961f-82ee72b054a4